--- a/css/index.css
+++ b/css/index.css
@@ -15,7 +15,7 @@ html {
 }
 
 #PianoPanel {
-    background-color: var(--globa-bgColor);
+    /* background-color: var(--globa-bgColor); */
     width: 100%;
     height: 100vh;
     box-sizing: border-box;
@@ -134,6 +134,61 @@ html {
     border: 1px solid white;
     border-radius: 26px;
     box-sizing: border-box;
+}
+
+
+/* 加载中 */
+#loadding {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    width: 150px;
+    height: 80px;
+}
+#loadding .sp-circle {
+    border: 4px rgba(183, 183, 183, 0.25) solid;
+    border-top: 4px #cccccc solid;
+    border-radius: 50%;
+    -webkit-animation: spCircRot .6s infinite linear;
+    animation: spCircRot .6s infinite linear;
+}
+#loadding .sp {
+    width: 32px;
+    height: 32px;
+    clear: both;
+    margin: 20px auto;
+}
+@-webkit-keyframes spCircRot {
+    from {
+      -webkit-transform: rotate(0deg);
+    }
+    to {
+      -webkit-transform: rotate(359deg);
+    }
+  }
+  @keyframes spCircRot {
+    from {
+      transform: rotate(0deg);
+    }
+    to {
+      transform: rotate(359deg);
+    }
+}
+#loadding > p {
+    text-align: center;
+    font-size: 14px;
+}
+
+
+/* 提示 */
+#info {
+    position: fixed;
+    bottom: 80px;
+    z-index: 1001;
+    width: 100%;
+}
+#info > p {
+    text-align: center;
 }
 
 
